Added type uniquer which can be used to ensure identical types are represented by the same instance. Type equality is now always handled via reference equality. Fixed multiple smaller bugs related to this change. Implemented multiple significant optimizations in the vm which cut execution time by 50% - 400%